# hygen-axum-podman-template

./: .gitignore  CHANGELOG.md  README.md  package.json
_templates/axum-podman/init/: .gitignore.ejs.t  Makefile.ejs.t  README.md  README.md.ejs.t  tasks.py.ejs.t
_templates/axum-podman/init/infra/compose/event-listeners/: DELETEME.ejs.t
_templates/axum-podman/init/infra/compose/scheduled/: DELETEME.ejs.t
_templates/axum-podman/init/infra/compose/services/: docker-compose-dev.yml.ejs.t  docker-compose-tst.yml.ejs.t  docker-compose.yml.ejs.t
_templates/axum-podman/init/infra/compose/tools/: DELETEME.ejs.t
_templates/axum-podman/init/infra/images/: Dockerfile.rust-axum-dev.ejs.t  Dockerfile.rust-axum-prd.ejs.t
_templates/axum-podman/init/source/: Cargo.toml.ejs.t
_templates/axum-podman/init/source/crates/: Cargo.toml  Cargo.toml.ejs.t
_templates/axum-podman/init/source/crates/scheduled/: DELETEME.ejs.t
_templates/axum-podman/init/source/crates/services/example/: Cargo.toml  Cargo.toml.ejs.t
_templates/axum-podman/init/source/crates/services/example/src/: error.rs.ejs.t  main.rs  main.rs.ejs.t
_templates/axum-podman/init/source/crates/tools/: DELETEME.ejs.t
_templates/axum-podman/lib/new/: Cargo.toml.ejs.t
_templates/axum-podman/new-lib/src/: error.rs.ejs.t  lib.rs.ejs.t
_templates/axum-podman/project/new/: Makefile  tasks.py
_templates/axum-podman/project/new/infra/images/: Dockerfile.rust-axum-dev
_templates/axum-podman/services/new/: Cargo.toml.ejs.t
_templates/axum-podman/services/new/src/: main.rs.ejs.t
(+10 files in other folders)
